# multimodal-rag

./: README.md  camera_image_matching.ipynb  camera_image_matching.py  dim_test.ipynb  hello.py  main.py  multi_image_match_test.py  pyproject.toml  retinface.ipynb  test_logging.py  test_main_logging.py
data/query_images/: IMG_2079.HEIC  IMG_2237.HEIC  IMG_2264.HEIC  IMG_2284.HEIC  IMG_2354.HEIC  IMG_2361.HEIC  IMG_2521.HEIC  IMG_2554 2.HEIC  IMG_2597.HEIC  IMG_2648.HEIC  IMG_2707.HEIC
notebooks/: 01_facial_recog_embedding.ipynb  qdrant_demo.ipynb  retinface.ipynb
qdrant_storage/: raft_state.json
qdrant_storage/collections/demo_collection/0/: newest_clocks.json  replica_state.json
qdrant_storage/collections/detected_faces_collection/0/: newest_clocks.json
qdrant_storage/collections/detected_faces_collection/0/segments/baf22845-b16b-4b54-9e4b-cf2611b402ae/: mutable_id_tracker.mappings
qdrant_storage/collections/faces_collection/0/: newest_clocks.json
qdrant_storage/collections/faces_collection/0/segments/469b543b-e704-4d27-85ea-eb7bf6e88be3/: mutable_id_tracker.mappings
qdrant_storage/collections/faces_collection/0/segments/5b27078c-d096-42fe-8471-f0bf2fadaf96/: mutable_id_tracker.mappings
qdrant_storage/collections/my_collection/0/: newest_clocks.json
qdrant_storage/collections/test_collection/0/: newest_clocks.json
src/: __init__.py  detect.py  facial_detection.py  image_converter.py  main.py  reference.py  reference_dataset_creation.py  vector_db.py
(+37 files in other folders)
